# Infield

./: .gitignore  .graphify_analysis.json  .graphify_ast.json  .graphify_detect.json  .graphify_uncached.txt  Agent.md.md  CLAUDE.md  PLAN.md  README (2).md  REBUILD_RATIONALE.md  Stacks.txt  eslint.config.js  heros.components.css  index.html  infield (1).html  package.json  pitfall.md  vite.config.ts
.cargo/: config.toml
.cursor/rules/: handy-workspace.md
.playwright-cli/: page-2026-04-25T01-01-24-712Z.yml  page-2026-04-25T01-08-34-073Z.yml  page-2026-04-25T01-11-47-880Z.yml
copy/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
copy/public/: globe.html  manifest.json  service-worker.js
copy/src/: App.tsx  app.css  crypto-vault.ts  ebay-oauth.ts  ebay-sync.ts  scheduler.ts  tauri-bridge.ts  types.ts  vault-migration.test.ts
docs/architecture/: atmospheric-stack.md  entry-experience.md  panel-system.md  theme-module.md  vault-database-storage.md
docs/design/: interview-mode-demo.html
docs/frontend/: legacy-wiring-map.md
graphify-out/: GRAPH_REPORT.md  God-Nodes.md  cost.json  graph.html  manifest.json
old/: EmbeddingPitfall.md  PLAN.md  PROJECT_HANDOVER.md  UI_POLISH_PLAN.md  designlayout.md  frontendplan.md  migration.md  vault-clarifications.md
patches/vad-rs/: Cargo.toml
scripts/: gen-system-audio-svg-backup.mjs  patch-glide-data-grid-dnd.mjs  prepare_infield_icons.py  sync-sidenote-i18n.mjs
spikes/seed_vault/: Cargo.toml
spikes/seed_vault/src/: main.rs
spikes/sqlite_vec_spike/: Cargo.toml
spikes/sqlite_vec_spike/src/: lib.rs
src/: App.css  App.tsx  bindings.ts  ebay-sync.test.ts  glide-data-grid-overlay-preload.ts  main.tsx  tauri-bridge.ts  types.ts  vault-migration.ts  workspace.css
src-tauri/: Cargo.toml  How_To_build.txt  rebuild_sidecar.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/handy-keys/src/platform/windows/: listener.rs
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer.nsi
src-tauri/src/: actions.rs  app_identity.rs  clipboard.rs  debug_session_log.rs  embedding_sidecar_protocol.rs  input.rs  lib.rs  llm_client.rs  overlay.rs  portable.rs  settings.rs  transcription_coordinator.rs  transcription_workspace.rs  tray.rs
src-tauri/src/audio_toolkit/: mod.rs
src-tauri/src/audio_toolkit/audio/: loopback.rs  mic_chunked.rs  mod.rs  recorder.rs  utils.rs
src-tauri/src/commands/: attachments.rs  audio.rs  buddy.rs  chat.rs  database.rs  import_queue.rs  interview.rs  llm.rs  memory.rs  mod.rs  models.rs  onboarding.rs  rerank.rs  search.rs  system_audio.rs  ui.rs  url_import.rs  vault_sync.rs  workspace_nodes.rs  yt_dlp_plugin.rs
src-tauri/src/import/: mod.rs  post_processing.rs  segmenting.rs  web_media.rs
src-tauri/src/import/web_media_fixtures/: youtube_playlist.json  youtube_video.json
src-tauri/src/managers/: audio.rs  buddy.rs  chat_document_extract.rs  chat_manager.rs  chat_memory.rs  chunking.rs  embedding_ort.rs  embedding_worker.rs  interview_session.rs  interview_worker.rs  llama_backend.rs  llm.rs  memory.rs  mod.rs  model.rs  ollama_list.rs  onboarding.rs  reranker_cache.rs  reranker_download.rs  reranker_ort.rs  search.rs  system_audio.rs  transcription.rs  voice_session.rs
src-tauri/src/managers/database/: field.rs  filter.rs  json_store.rs  manager.rs  migration.rs  mod.rs  sort.rs
src-tauri/src/managers/workspace/: mod.rs  node_types.rs  workspace_manager.rs
src-tauri/src/managers/workspace/vault/: board.rs  calendar.rs  database_md.rs  format.rs  import.rs  mod.rs  table.rs
src-tauri/src/plugin/: mod.rs  yt_dlp.rs
src-tauri/src/shortcut/: mod.rs
src/Resume_site/: AsciiEye.tsx  LandingPage.tsx  Resume_site.css  ScrambleText.tsx
src/assets/: New Text Document.txt
src/buddy/: events.ts  levels.ts  teamPower.ts  types.ts
src/components/: AboutView.tsx  ActivityView.tsx  AppShell.tsx  AppSidebarChrome.tsx  AudioView.tsx  AudioWaveform.tsx  BacklinksPane.tsx  BottomBar.tsx  Breadcrumb.tsx  BuddyView.tsx  CaptureView.tsx  CartoonBuddy.tsx  ChestRevealModal.tsx  ConfirmDialog.tsx  ConversationList.tsx  DashboardView.tsx  DatabaseBoardView.tsx  DatabaseSelectPopover.tsx  DatabaseTableView.tsx  DatabasesView.tsx  EbayConnectModal.tsx  EditorTitleBar.tsx  EmptyState.tsx  GearInventoryPanel.tsx  HerOS.tsx  HerOSMenu.tsx  IconRail.tsx  ImportFilesTab.tsx  ImportQueueLists.tsx  ImportUrlTab.tsx  ImportView.tsx  InboxView.tsx  InspectorPanel.tsx  LoadingScreen.tsx  MarkdownEditor.tsx  MediaDropzone.tsx  ModelCard.tsx  NotesTabs.tsx  NotesView.tsx  OnboardingOverlay.tsx  (+33 more)
src/contexts/: BuddyContext.tsx  LayoutContext.tsx  VaultContext.tsx
src/database/: cellRenderers.tsx  useDatabase.ts
src/editor/: ancestors.ts  autosavePlugin.ts  conflictState.ts  herosTheme.ts  imageInsert.ts  imageMarkdown.ts  imagePastePlugin.ts  livePreview.ts  livePreviewWidgets.ts  nodeIdFacet.ts  nodeLinkClick.ts  recentQueries.ts  searchSnippet.ts  searchTokens.ts  slashCommands.ts  slashCompletion.ts  slashIcons.ts  slashRenderers.ts  tabsReducer.ts  voiceMemoPill.ts  wikilinkCompletion.ts
src/entry/: EntryContext.tsx  LemniscateOrb.tsx  LoadingScreen.tsx  LoginPage.tsx  index.ts
src/hooks/: useEventTemplates.ts  useFooterSystemStatus.ts  useImportQueue.ts  useTranscriptionStatus.ts  useWorkspaceRecents.ts  useYtDlpPlugin.ts
src/lib/: activeEditorFlush.ts  calendarColors.ts  chatPromptPresets.ts  chatProviderConfig.ts  cursorDebugLog.ts  editorLayoutConstants.ts  fieldTypeCatalog.ts  formatRelativeTime.ts  formatVoiceMemoRecordedAt.ts  homeDashboardMetrics.ts  homeWorkspaceMetrics.ts  localAudioFileUrl.ts  materializeWorkspaceDraft.ts  settingsSection.ts  sidenoteRail.ts  voiceMemoAudioDirective.ts  workspaceAppearance.ts  workspaceCellPayload.ts  workspaceDocumentTags.ts  workspaceDraftSchema.test.ts  workspaceDraftSchema.ts  workspaceFieldSelect.ts  workspaceFloatingLayer.test.ts  workspaceFloatingLayer.tsx  workspaceFormulas.test.ts  workspaceFormulas.ts  (+3 more)
tests/: calendar-contract.spec.ts
tmp_research/: nemoclaw.html  w25-task17-staged.patch
(+363 files in other folders)
