[package]
name = "handy"
version = "0.8.1"
description = "Handy"
authors = ["cjpais"]
edition = "2021"
license = "MIT"
default-run = "handy"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "handy_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# [[bin]]
# name = "cli"
# path = "src/audio_toolkit/bin/cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[dependencies]
once_cell = "1"
tauri = { version = "2.10.2", features = [
  "protocol-asset",
  "macos-private-api",
  "tray-icon",
  'image-png',
] }
tauri-plugin-log = "2.7.1"
tauri-plugin-opener = "2.5.2"
tauri-plugin-store = "2.4.1"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-os = "2.3.2"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-macos-permissions = "2.3.0"
tauri-plugin-process = "2.3.1"
rusqlite_migration = "2.3"
tauri-plugin-fs = "2.4.4"
# Applies native translucency / rounded-corner behavior on macOS (NSVisualEffectView)
# and Windows 11 (Mica / Acrylic via DWM). Without this, Tauri's `transparent(true)`
# on Windows falls back to opaque compositing and the rounded `#root` CSS corners
# don't show through to the desktop. See src/App.css `#root` styles.
window-vibrancy = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdev = { git = "https://github.com/rustdesk-org/rdev" }
cpal = "0.16.0"
anyhow = "1.0.95"
rubato = "0.16.2"
hound = "3.5.1"
log = "0.4.25"
lru = "0.12"
env_filter = "0.1.0"
tokio = { version = "1.43.0", features = ["process"] }
vad-rs = { path = "../patches/vad-rs", default-features = false }
enigo = "0.6.1"
rodio = { git = "https://github.com/cjpais/rodio.git" }
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
futures-util = "0.3"
# Platform keystores must be enabled; otherwise keyring v3 uses an in-memory mock and
# each `Entry::new` gets an isolated credential — saves are invisible to later loads.
keyring = { version = "3", features = ["windows-native", "apple-native", "linux-native"] }
async-trait = "0.1"
rustfft = "6.4.0"
strsim = "0.11.0"
natural = "0.5.0"
regex = "1"
unicode-normalization = "0.1"
chrono = "0.4"
# `load_extension` feature is separate from `bundled` — it exposes
# `Connection::load_extension_enable()` and related FFI. Required even though
# we statically link sqlite-vec via `sqlite3_auto_extension`, to future-proof
# runtime dlopen of other extensions.
rusqlite = { version = "0.37", features = ["bundled", "load_extension"] }
# Phase A: in-DB vectors via sqlite-vec. Static-linked via Rust crate; the
# extension is registered globally via `sqlite_vec::sqlite3_vec_init` handed
# to `rusqlite::ffi::sqlite3_auto_extension` once at process start — every
# subsequently-opened Connection picks it up automatically. No dlopen, no
# codesign / notarization path for this extension. (Rule 17 still applies to
# future dlopen-required extensions; sqlite-vec is a carve-out.)
sqlite-vec = "0.1"
# Zero-cost f32 slice → bytes for vec_embeddings inserts.
zerocopy = "0.8"
# Phase A embedding runtime — ONNX Runtime via the `ort` crate. Pinned to the
# exact version `transcribe-rs 0.3.5` uses transitively so they share the same
# native onnxruntime library with no duplication. Zero new native-lib shipping
# work — ORT is already bundled for 6 of 7 transcribe-rs engines. Embedding
# session is CPU-only (intra-op threads capped per Rule 16a); GPU execution
# providers stay reserved for transcription.
ort = "=2.0.0-rc.12"
# HuggingFace Rust tokenizers — reads `tokenizer.json` from the downloaded
# bge-small-en-v1.5 model directory. We disable the default `esaxx_fast`
# feature: it's only used for SentencePiece *training* (we do inference
# only), and its `esaxx-rs` transitive C++ dep builds /MT (static MSVC
# runtime) while `whisper-rs-sys` builds /MD (dynamic), producing an
# LNK2038 'RuntimeLibrary' mismatch at link time on Windows. Dropping the
# feature fixes the link without losing any inference functionality.
# `onig` and `progressbar` stay on — they're used by `encode()` paths and
# model-load progress UI respectively.
tokenizers = { version = "0.20", default-features = false, features = ["onig", "progressbar"] }
# Tokio ↔ OS-thread bridge per Rule 16 — the ORT worker is a
# `std::thread::spawn` (not a tokio task) to prevent native panics from
# poisoning the runtime. `crossbeam_channel::bounded` is the request channel;
# back-pressure is visible rather than unbounded.
crossbeam-channel = "0.5"
tar = "0.4.44"
flate2 = "1.0"
sha2 = "0.10"
transcribe-rs = { version = "0.3.5", features = ["whisper-cpp", "onnx"] }
handy-keys = "0.2.4"
ferrous-opencc = "0.2.3"
clap = { version = "4", features = ["derive"] }
specta = "=2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
tauri-plugin-dialog = "2.6"
uuid = { version = "1", features = ["v4"] }
llama-cpp-2 = "=0.1.141"
axum = "0.7"
# TODO(Phase G): remove after chat_memory.rs is rebuilt. Not used by
# embedding search — see REBUILD_RATIONALE §15. Phase A swapped embeddings
# to sqlite-vec; the remaining caller is chat_memory.rs, which Phase G
# rewrites entirely on Gemini/Vertex.
usearch = { version = "2", default-features = false, features = ["fp16lib"] }
walkdir = "2"
csv = "1"
pdf-extract = "0.7"
calamine = "0.26"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
encoding_rs = "0.8"
base64 = "0.22"
fs2 = "0.4"
infer = "0.16"
# Used for a single pre-Tauri-init native message dialog when the vault
# process lock (Rule 15 / D11) is already held by another instance. rfd is
# already linked via `tauri-plugin-dialog` — declaring it here is zero new
# compiled code, just an explicit edge instead of a transitive one. The
# dialog has to pop BEFORE `tauri::Builder::new()` so the plugin-dialog
# machinery isn't available yet.
rfd = "0.16"
serde_yaml = "0.9"
thiserror = "2.0.18"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"
libc = "0.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.5.1"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-single-instance = "2.3.2"
tauri-plugin-updater = "2.10.0"

[target.'cfg(windows)'.dependencies]
transcribe-rs = { version = "0.3.5", features = ["whisper-vulkan", "ort-directml"] }
windows = { version = "0.61.3", features = [
  "Win32_Media_Audio",
  "Win32_Media_Audio_Endpoints",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Variant",
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  # Enables DwmSetWindowAttribute for forcing rounded corners on our
  # borderless (decorations:false) window — Mica alone doesn't round
  # corners on Windows 11 without an explicit DWMWCP_ROUND call.
  "Win32_Graphics_Dwm",
] }
winreg = "0.55"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
transcribe-rs = { version = "0.3.5", features = ["whisper-metal"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk-layer-shell = { version = "0.8", features = ["v0_6"] }
gtk = "0.18"
transcribe-rs = { version = "0.3.5", features = ["whisper-vulkan"] }

[patch.crates-io]
tauri-runtime = { git = "https://github.com/cjpais/tauri.git", branch = "handy-2.10.2" }
tauri-runtime-wry = { git = "https://github.com/cjpais/tauri.git", branch = "handy-2.10.2" }
tauri-utils = { git = "https://github.com/cjpais/tauri.git", branch = "handy-2.10.2" }
handy-keys = { path = "handy-keys" }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "unwind"
